--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "latest covid data of UK",
     "manifest_version": 3,
-    "author": "Sampurna Chapagain",
+    "author": "Vanshcodeworks",
     "action":{
         "default_popup": "index.html",
         "default_title": "Latest Covid Report"
